# corars

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  release-please-config.json  release.py  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml  e2e.yml  release.yml
.opencode/skills/contract-reviewer/: INIT.md  SKILL.md
corars/: CHANGELOG.md  Cargo.toml  README.md  justfile  release-please-config.json
crates/cora-agent/: Cargo.toml
crates/cora-agent/src/: agents_md.rs  agents_md_test.rs  bootstrap.rs  bootstrap_test.rs  cache_diagnostics.rs  context.rs  context_test.rs  engine.rs  engine_test.rs  error.rs  lib.rs  orchestration.rs  orchestration_test.rs  session.rs  session_test.rs  skill_tool.rs  skill_tool_test.rs  spawn_tool.rs  spawner.rs  spawner_test.rs  stream.rs  tool_call.rs  tool_call_test.rs  tool_policy.rs  tool_policy_test.rs  turn.rs  vcr.rs
crates/cora-agent/src/commands/: clear_test.rs  compact.rs  compact_test.rs  help_test.rs  registry.rs
crates/cora-agent/src/compact/: auto.rs  auto_test.rs  emergency.rs  estimate.rs  estimate_test.rs  micro.rs  mod.rs  state.rs
crates/cora-agent/src/output/: protocol_sink.rs
crates/cora-agent/src/plan/: tools.rs
crates/cora-agent/tests/: autocompact_test.rs  bootstrap_test.rs  compact_types_test.rs  cwd_injection_test.rs  emergency_test.rs  engine_compact_test.rs  engine_test.rs  json_stream_approval_test.rs  memory_context_integration.rs  microcompact_test.rs  orchestration_test.rs  output_compaction_test.rs  plan_e2e_test.rs  plan_engine_test.rs  plan_prompt_file_test.rs  plan_tools_test.rs  skills_e2e.rs  spawn_description_test.rs  spawn_test.rs  tool_guidance_prompt_test.rs
crates/cora-agent/tests/acceptance/: compact_test.rs  cross_feature_test.rs  file_cache_test.rs  helpers.rs  memory_test.rs  mod.rs  plan_mode_test.rs  tool_desc_test.rs
crates/cora-agent/tests/common/: mod.rs
crates/cora-agent/tests/e2e/: anthropic.rs  compaction.rs  mod.rs  openai.rs
crates/cora-cli/: Cargo.toml
crates/cora-cli/src/: bootstrap.rs  cli.rs  cli_test.rs  run.rs
crates/cora-cli/src/commands/: cmd_auth.rs  cmd_config.rs  cmd_session.rs  cmd_skills.rs  dispatch.rs  mod.rs
crates/cora-cli/src/json_stream/: context.rs  dispatch.rs  message.rs  mod.rs  pre_message.rs  session.rs  session_test.rs
crates/cora-compact/: Cargo.toml
crates/cora-compact/src/: sanitize_test.rs
crates/cora-config/: Cargo.toml
crates/cora-config/src/: auth.rs  compact.rs  compact_test.rs  compat.rs  compat_test.rs  config.rs  config_test.rs  hooks.rs  hooks_test.rs  logging.rs  logging_test.rs  plan.rs  plan_test.rs  shell.rs
crates/cora-config/tests/: compact_config_test.rs  logging_integration.rs  plan_config_test.rs
crates/cora-cowork-ai-agent/: Cargo.toml
crates/cora-cowork-ai-agent/src/: lib.rs
crates/cora-cowork-api-types/: Cargo.toml
crates/cora-cowork-api-types/src/: lib.rs
crates/cora-cowork-app/: Cargo.toml
crates/cora-cowork-app/src/: lib.rs
crates/cora-cowork-assets/: Cargo.toml
crates/cora-cowork-assets/src/: lib.rs
crates/cora-cowork-assistant/: Cargo.toml
crates/cora-cowork-auth/: Cargo.toml
crates/cora-cowork-channel/: Cargo.toml
crates/cora-cowork-common/: Cargo.toml
crates/cora-cowork-conversation/: Cargo.toml
crates/cora-cowork-cron/: Cargo.toml
crates/cora-cowork-db/: Cargo.toml
crates/cora-cowork-extension/: Cargo.toml
crates/cora-cowork-file/: Cargo.toml
crates/cora-cowork-mcp/: Cargo.toml
crates/cora-cowork-office/: Cargo.toml
crates/cora-cowork-realtime/: Cargo.toml
crates/cora-cowork-runtime/: Cargo.toml
crates/cora-cowork-shell/: Cargo.toml
crates/cora-cowork-system/: Cargo.toml
crates/cora-cowork-team/: Cargo.toml
crates/cora-cowork-team-prompts/: Cargo.toml
crates/cora-mcp/: Cargo.toml
crates/cora-mcp/src/: config.rs  manager.rs  tool_proxy.rs  tool_proxy_test.rs
crates/cora-mcp/tests/: streamable_http_crlf.rs
crates/cora-memory/: Cargo.toml
crates/cora-memory/src/: lib.rs  paths.rs  prompt_test.rs  store.rs
crates/cora-memory/tests/: e2e_integration.rs  index_integration.rs  paths_integration.rs  prompt_integration.rs  store_integration.rs
crates/cora-process/: Cargo.toml
crates/cora-protocol/: Cargo.toml
crates/cora-protocol/src/: commands.rs  commands_test.rs  events.rs  events_test.rs  reader.rs  writer_test.rs
crates/cora-protocol/tests/: approval_manager_test.rs  capability_discovery_test.rs  commands_test.rs  set_config.rs
crates/cora-providers/: Cargo.toml
crates/cora-skills/: Cargo.toml
crates/cora-skills/src/: conditional.rs  context_modifier.rs  context_modifier_test.rs  discovery.rs  discovery_supplemental_test.rs  executor.rs  executor_test.rs  frontmatter.rs  hooks.rs  integration_test.rs  loader.rs  loader_supplemental_test.rs  loader_test.rs  mcp.rs  mcp_test.rs  paths.rs  paths_test.rs  shell.rs  shell_supplemental_test.rs  substitution.rs  substitution_test.rs  types.rs  watcher.rs  watcher_integration_test.rs
crates/cora-skills/src/bundled/: registry.rs  registry_test.rs
crates/cora-tools/: Cargo.toml
crates/cora-tools/src/: edit.rs  edit_test.rs  exec_command.rs  exec_command_test.rs  file_cache.rs  glob.rs  glob_test.rs  grep.rs  lib.rs  read.rs  read_test.rs  registry.rs  registry_test.rs  tool.rs  tool_search.rs  view_image.rs  view_image_test.rs  write.rs  write_test.rs
crates/cora-tools/tests/: edit_write_cache_test.rs  file_cache_test.rs  read_dedup_test.rs  tool_description_test.rs
crates/cora-types/: Cargo.toml
crates/cora-types/src/: compact.rs  lib.rs  llm.rs  message.rs  message_test.rs  spawner.rs
crates/cora-types/tests/: plan_mode_transition_test.rs
docs/: advanced.md  core-concepts.md  getting-started.md  json-stream-protocol.md  providers.md  skills.md
scripts/: release.py
tests/: engine_test.rs  json_stream_approval_test.rs  orchestration_test.rs  provider_anthropic_test.rs  provider_openai_test.rs  skills_e2e.rs  spawn_test.rs
tests/common/: mod.rs
workspace-hack/: Cargo.toml
(+63 files in other folders)
