[workspace]
resolver = "3"
members = [
    "crates/cora-cli",
    "crates/cora-cowork-assets",
    "crates/cora-cowork-common",
    "crates/cora-cowork-db",
    "crates/cora-cowork-api-types",
    "crates/cora-cowork-realtime",
    "crates/cora-cowork-runtime",
    "crates/cora-cowork-auth",
    "crates/cora-cowork-system",
    "crates/cora-cowork-file",
    "crates/cora-cowork-office",
    "crates/cora-cowork-shell",
    "crates/cora-cowork-ai-agent",
    "crates/cora-cowork-mcp",
    "crates/cora-cowork-conversation",
    "crates/cora-cowork-extension",
    "crates/cora-cowork-channel",
    "crates/cora-cowork-team-prompts",
    "crates/cora-cowork-team",
    "crates/cora-cowork-cron",
    "crates/cora-cowork-assistant",
    "crates/cora-cowork-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://coracowork.shop/"
repository = "https://github.com/coracowork/"
documentation = "https://github.com/coracowork/"

[workspace.dependencies]
  cora-cora-agent = { path = "crates/cora-cora-agent" }
  cora-cora-cli = { path = "crates/cora-cora-cli" }
  cora-cora-compact = { path = "crates/cora-cora-compact" }
  cora-cora-config = { path = "crates/cora-cora-config" }
  cora-cora-cowork-ai-agent = { path = "crates/cora-cora-cowork-ai-agent" }
  cora-cora-cowork-api-types = { path = "crates/cora-cora-cowork-api-types" }
  cora-cora-cowork-app = { path = "crates/cora-cora-cowork-app" }
  cora-cora-cowork-assets = { path = "crates/cora-cora-cowork-assets" }
  cora-cora-cowork-assistant = { path = "crates/cora-cora-cowork-assistant" }
  cora-cora-cowork-auth = { path = "crates/cora-cora-cowork-auth" }
  cora-cora-cowork-channel = { path = "crates/cora-cora-cowork-channel" }
  cora-cora-cowork-common = { path = "crates/cora-cora-cowork-common" }
  cora-cora-cowork-conversation = { path = "crates/cora-cora-cowork-conversation" }
  cora-cora-cowork-cron = { path = "crates/cora-cora-cowork-cron" }
  cora-cora-cowork-db = { path = "crates/cora-cora-cowork-db" }
  cora-cora-cowork-extension = { path = "crates/cora-cora-cowork-extension" }
  cora-cora-cowork-file = { path = "crates/cora-cora-cowork-file" }
  cora-cora-cowork-mcp = { path = "crates/cora-cora-cowork-mcp" }
  cora-cora-cowork-office = { path = "crates/cora-cora-cowork-office" }
  cora-cora-cowork-realtime = { path = "crates/cora-cora-cowork-realtime" }
  cora-cora-cowork-runtime = { path = "crates/cora-cora-cowork-runtime" }
  cora-cora-cowork-shell = { path = "crates/cora-cora-cowork-shell" }
  cora-cora-cowork-system = { path = "crates/cora-cora-cowork-system" }
  cora-cora-cowork-team = { path = "crates/cora-cora-cowork-team" }
  cora-cora-cowork-team-prompts = { path = "crates/cora-cora-cowork-team-prompts" }
  cora-cora-mcp = { path = "crates/cora-cora-mcp" }
  cora-cora-memory = { path = "crates/cora-cora-memory" }
  cora-cora-process = { path = "crates/cora-cora-process" }
  cora-cora-protocol = { path = "crates/cora-cora-protocol" }
  cora-cora-providers = { path = "crates/cora-cora-providers" }
  cora-cora-skills = { path = "crates/cora-cora-skills" }
  cora-cora-tools = { path = "crates/cora-cora-tools" }
  cora-cora-types = { path = "crates/cora-cora-types" }
# Internal crates
cora-cowork-common = { path = "crates/cora-cowork-common" }
cora-cowork-assets = { path = "crates/cora-cowork-assets" }
cora-cowork-db = { path = "crates/cora-cowork-db" }
cora-cowork-api-types = { path = "crates/cora-cowork-api-types" }
cora-cowork-realtime = { path = "crates/cora-cowork-realtime" }
cora-cowork-runtime = { path = "crates/cora-cowork-runtime" }
cora-cowork-auth = { path = "crates/cora-cowork-auth" }
cora-cowork-system = { path = "crates/cora-cowork-system" }
cora-cowork-file = { path = "crates/cora-cowork-file" }
cora-cowork-office = { path = "crates/cora-cowork-office" }
cora-cowork-shell = { path = "crates/cora-cowork-shell" }
cora-cowork-ai-agent = { path = "crates/cora-cowork-ai-agent" }
cora-cowork-mcp = { path = "crates/cora-cowork-mcp" }
cora-cowork-conversation = { path = "crates/cora-cowork-conversation" }
cora-cowork-extension = { path = "crates/cora-cowork-extension" }
cora-cowork-channel = { path = "crates/cora-cowork-channel" }
cora-cowork-team-prompts = { path = "crates/cora-cowork-team-prompts" }
cora-cowork-team = { path = "crates/cora-cowork-team" }
cora-cowork-cron = { path = "crates/cora-cowork-cron" }
cora-cowork-assistant = { path = "crates/cora-cowork-assistant" }
cora-cowork-app = { path = "crates/cora-cowork-app" }

cora-agent = { git = "https://github.com/coracowork/corars.git", tag = "v0.1.0" }
cora-providers = { git = "https://github.com/coracowork/corars.git", tag = "v0.1.0" }
cora-types = { git = "https://github.com/coracowork/corars.git", tag = "v0.1.0" }
cora-protocol = { git = "https://github.com/coracowork/corars.git", tag = "v0.1.0" }
cora-config = { git = "https://github.com/coracowork/corars.git", tag = "v0.1.0" }
cora-mcp = { git = "https://github.com/coracowork/corars.git", tag = "v0.1.0" }

# Core framework
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async utilities
futures-util = "0.3"

# Async trait (dyn-compatible async traits)
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Auth / Crypto
jsonwebtoken = "9"
bcrypt = "0.17"
aes-gcm = "0.10"

# UUID
uuid = { version = "1", features = ["v7"] }

# HTTP client — use rustls with native roots to align backend trust with the host system.
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls-native-roots"], default-features = false }

# Concurrency
dashmap = "6"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# Protobuf
prost = "0.13"

# Semver
semver = "1"

# Directories
dirs = "6"

# Regex
regex = "1"

# File system
include_dir = "0.7"
notify = "8"
walkdir = "2"
ignore = "0.4"
zip = "2"
git2 = { version = "0.20", default-features = false }
mime_guess = "2"
rust-embed = "8"

# Runtime embedding
fs2 = "0.4"
zstd = "0.13"

# Cron
cron = "0.15"
chrono = "0.4"
chrono-tz = "0.10"

# Shell
open = "5"
which = "7"

# Office
calamine = "0.36"
rust_xlsxwriter = "0.82"
sha1 = "0.10"
sha2 = "0.10"

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrock = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }

# TLS
rustls = "0.23"
rustls-native-certs = "0.8"

# Pin rustls-webpki to fix RUSTSEC-2026-{0098,0099,0104}
rustls-webpki = "0.103.13"

# OAuth / MCP
oauth2 = "5.0.0-rc.1"
toml = "0.8"

# Ed25519
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Encoding
base64 = "0.22"

# HTTP body utilities (testing)
http-body-util = "0.1"

# Testing
tempfile = "3"
wiremock = "0.6"

# Random
getrandom = "0.2"
hex = "0.4"
libc = "0.2"

# Shrink target/debug: minimal debuginfo, sidecar files, no incremental cache.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = false

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = false


