[workspace]
resolver = "3"
members = [
    "crates/cora-agent",
    "crates/cora-cli",
    "crates/cora-compact",
    "crates/cora-config",
    "crates/cora-mcp",
    "crates/cora-memory",
    "crates/cora-process",
    "crates/cora-protocol",
    "crates/cora-providers",
    "crates/cora-skills",
    "crates/cora-tools",
    "crates/cora-types",
    "crates/cora-cowork-ai-agent",
    "crates/cora-cowork-api-types",
    "crates/cora-cowork-app",
    "crates/cora-cowork-assets",
    "crates/cora-cowork-assistant",
    "crates/cora-cowork-auth",
    "crates/cora-cowork-channel",
    "crates/cora-cowork-common",
    "crates/cora-cowork-conversation",
    "crates/cora-cowork-cron",
    "crates/cora-cowork-db",
    "crates/cora-cowork-extension",
    "crates/cora-cowork-file",
    "crates/cora-cowork-mcp",
    "crates/cora-cowork-office",
    "crates/cora-cowork-realtime",
    "crates/cora-cowork-runtime",
    "crates/cora-cowork-shell",
    "crates/cora-cowork-system",
    "crates/cora-cowork-team",
    "crates/cora-cowork-team-prompts",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://coracowork.shop/"
repository = "https://github.com/coracowork/"
documentation = "https://github.com/coracowork/"

[workspace.dependencies]
# Internal crates - cora-*
cora-agent = { path = "crates/cora-agent" }
cora-cli = { path = "crates/cora-cli" }
cora-compact = { path = "crates/cora-compact" }
cora-config = { path = "crates/cora-config" }
cora-mcp = { path = "crates/cora-mcp" }
cora-memory = { path = "crates/cora-memory" }
cora-process = { path = "crates/cora-process" }
cora-protocol = { path = "crates/cora-protocol" }
cora-providers = { path = "crates/cora-providers" }
cora-skills = { path = "crates/cora-skills" }
cora-tools = { path = "crates/cora-tools" }
cora-types = { path = "crates/cora-types" }
is-terminal = { version = "0.4" }
is-docker = { version = "0.2" }
is-wsl = { version = "0.4" }
mockall = { version = "0.13" }
mockall_derive = { version = "0.13" }
predicates = { version = "3" }
assert_cmd = { version = "2" }
rstest = { version = "0.22" }
rstest_reuse = { version = "0.7" }
test-case = { version = "3" }
trybuild = { version = "1" }
criterion = { version = "0.5" }
serial_test = { version = "3" }
tokio-test = { version = "0.4" }


# Internal crates - cora-cowork-*
cora-cowork-common = { path = "crates/cora-cowork-common" }
cora-cowork-assets = { path = "crates/cora-cowork-assets" }
cora-cowork-db = { path = "crates/cora-cowork-db" }
cora-cowork-api-types = { path = "crates/cora-cowork-api-types" }
cora-cowork-realtime = { path = "crates/cora-cowork-realtime" }
cora-cowork-runtime = { path = "crates/cora-cowork-runtime" }
cora-cowork-auth = { path = "crates/cora-cowork-auth" }
cora-cowork-system = { path = "crates/cora-cowork-system" }
cora-cowork-file = { path = "crates/cora-cowork-file" }
cora-cowork-office = { path = "crates/cora-cowork-office" }
cora-cowork-shell = { path = "crates/cora-cowork-shell" }
cora-cowork-ai-agent = { path = "crates/cora-cowork-ai-agent" }
cora-cowork-mcp = { path = "crates/cora-cowork-mcp" }
cora-cowork-conversation = { path = "crates/cora-cowork-conversation" }
cora-cowork-extension = { path = "crates/cora-cowork-extension" }
cora-cowork-channel = { path = "crates/cora-cowork-channel" }
cora-cowork-team-prompts = { path = "crates/cora-cowork-team-prompts" }
cora-cowork-team = { path = "crates/cora-cowork-team" }
cora-cowork-cron = { path = "crates/cora-cowork-cron" }
cora-cowork-assistant = { path = "crates/cora-cowork-assistant" }
cora-cowork-app = { path = "crates/cora-cowork-app" }

# Futures
futures = { version = "0.3" }
futures-util = { version = "0.3" }
futures-core = { version = "0.3" }
futures-channel = { version = "0.3" }
futures-executor = { version = "0.3" }
futures-io = { version = "0.3" }
futures-sink = { version = "0.3" }
futures-task = { version = "0.3" }
futures-macro = { version = "0.3" }

# TUI and terminal
crossterm = { version = "0.29" }
unicode-width = { version = "0.2" }
ratatui = { version = "0.29" }
signal-hook = { version = "0.3" }

# CLI utilities
console = { version = "0.16" }
dialoguer = { version = "0.11" }

# Serialization
toml = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }

# Async
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Core framework
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
http = { version = "1" }

# Error handling
thiserror = { version = "2" }
anyhow = { version = "1" }

# Logging
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Auth / Crypto
jsonwebtoken = { version = "9" }
bcrypt = { version = "0.17" }
aes-gcm = { version = "0.10" }

# UUID
uuid = { version = "1", features = ["v7"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls-native-roots"], default-features = false }

# Concurrency
dashmap = { version = "6" }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# Protobuf
prost = { version = "0.13" }

# Semver
semver = { version = "1" }

# Regex
regex = { version = "1" }

# File system
include_dir = { version = "0.7" }
notify = { version = "8" }
walkdir = { version = "2" }
ignore = { version = "0.4" }
zip = { version = "2" }
git2 = { version = "0.20", default-features = false }
mime_guess = { version = "2" }
rust-embed = { version = "8" }
glob = { version = "0.3" }


# Runtime embedding
fs2 = { version = "0.4" }
zstd = { version = "0.13" }

# Cron
cron = { version = "0.15" }
chrono = { version = "0.4" }
chrono-tz = { version = "0.10" }

# Shell
open = { version = "5" }
which = { version = "7" }

# Office
calamine = { version = "0.36" }
rust_xlsxwriter = { version = "0.82" }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrock = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }

# TLS
rustls = { version = "0.23" }
rustls-native-certs = { version = "0.8" }
rustls-webpki = { version = "0.103.13" }

# OAuth / MCP
oauth2 = { version = "5.0.0-rc.1" }

# Ed25519
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Encoding
base64 = { version = "0.22" }

# HTTP body utilities
http-body-util = { version = "0.1" }

# Testing
wiremock = { version = "0.6" }
tempfile = { version = "3" }
pretty_assertions = { version = "1" }

# Misc
dirs = { version = "6" }
termion = { version = "4.0" }
tui = { version = "0.21" }
indoc = { version = "2" }
strum = { version = "0.28", features = ["derive"] }
strum_macros = { version = "0.28" }
rand = { version = "0.9" }
serde_path_to_error = { version = "0.1" }
indexmap = { version = "2" }
lru = { version = "0.18" }
getrandom = { version = "0.2" }
hex = { version = "0.4" }
libc = { version = "0.2" }

# Shrink target/debug: minimal debuginfo, sidecar files, no incremental cache.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = false

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = false


