[workspace]
resolver = "2"
members = [
    "crates/cora-types",
    "crates/cora-protocol",
    "crates/cora-compact",
    "crates/cora-process",
    "crates/cora-config",
    "crates/cora-providers",
    "crates/cora-tools",
    "crates/cora-mcp",
    "crates/cora-skills",
    "crates/cora-memory",
    "crates/cora-agent",
    "crates/cora-cli",
    "workspace-hack",
]

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/coracowork/corars"

[workspace.dependencies]
# Internal crates
cora-types     = { path = "crates/cora-types" }
cora-protocol  = { path = "crates/cora-protocol" }
cora-compact   = { path = "crates/cora-compact" }
cora-process   = { path = "crates/cora-process" }
cora-config    = { path = "crates/cora-config" }
cora-providers = { path = "crates/cora-providers" }
cora-tools     = { path = "crates/cora-tools" }
cora-mcp       = { path = "crates/cora-mcp" }
cora-skills    = { path = "crates/cora-skills" }
cora-memory    = { path = "crates/cora-memory" }
cora-agent     = { path = "crates/cora-agent" }

# Async runtime
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
# HTTP client — use rustls to avoid native OpenSSL dep during cross-compilation
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v7"] }

# Async trait support
async-trait = "0.1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow    = "1"

# File globbing
glob = "0.3"

# Executable lookup for cross-platform shell detection
which = "8"

# LRU cache (for file state tracking)
lru = "0.18"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# TOML config parsing
toml = "1.0"

# YAML frontmatter parsing (for skill files)
serde_yaml = "0.9"

# XDG/platform config directory
dirs = "6"

# Regular expressions (for argument substitution in skills)
regex = "1"

# File system change notification (for skill hot-reload)
notify = "8"

# Terminal color support
crossterm = "0.29"

# TTY detection
is-terminal = "0.4"

# AWS SigV4 signing (for Bedrock provider)
aws-sigv4            = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-config           = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts          = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client", "sigv4a"] }

# Pin rustls-webpki to fix RUSTSEC-2026-{0098,0099,0104}
rustls-webpki = "0.103.13"

# JWT creation (for Vertex GCP service account auth)
jsonwebtoken = "10"

# Base64 encoding
base64 = "0.22"

# URL parsing
url = "2"

# Structured logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

unicode-width = "0.2.2"

# Unix file flags (O_NOFOLLOW) for secure bundled skill file extraction
libc = "0.2"

# Windows process containment
windows-sys = "0.61"

# workspace-hack (managed by cargo-hakari for build speed)
workspace-hack = { path = "workspace-hack" }

# Test utilities
wiremock    = "0.6"
tokio-test  = "0.4"
tempfile    = "3"
mockall     = "0.15"
rstest      = "0.26"
serial_test = "3"
insta       = { version = "1", features = ["json"] }
