[package]
name = "cora-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI agent core for cora"

[dependencies]
cora-compact.workspace = true
cora-config.workspace = true
cora-memory.workspace = true
cora-providers.workspace = true
cora-tools.workspace = true
cora-mcp.workspace = true
cora-protocol.workspace = true
cora-skills.workspace = true
cora-types.workspace = true

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
