[package]
name = "cora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = truecora-agent.workspace = true
cora-compact.workspace = true
cora-config.workspace = true
cora-memory.workspace = true
cora-providers.workspace = true
cora-tools.workspace = true
cora-mcp.workspace = true
cora-protocol.workspace = true
cora-skills.workspace = true
cora-types.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
