[package]
name = "cora-tools"
description = "Built-in agent tools for corars (Read, Write, Edit, ExecCommand, Grep, Glob, Spawn)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cora-types.workspace    = true
cora-protocol.workspace = true
cora-config.workspace   = true
cora-process.workspace  = true

tracing.workspace     = true
tokio.workspace       = true
futures.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
anyhow.workspace      = true
glob.workspace        = true
lru.workspace         = true
workspace-hack.workspace = true

[dev-dependencies]
tempfile.workspace = true
